k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stripeflow
  labels:
    name: stripeflow
    app: stripeflow
